Update JAVA9_TO_JAVA24_GUIDE.md